# call-me-maybe

./: .flake8  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
data/input/: test.json
llm_sdk/: __init__.py
src/: __main__.py  constrained_decoder.py  data_loader.py  functions_validator.py  interactive.py  json_generator.py  state_machine.py  vocabulary.py
tests/: __init__.py  test_functions_validator.py
