[project]
name = "call-me-maybe"
version = "1.0.0"
description = "Introduction to function calling in LLMs"
readme = "README.md"
author = [{name = "advacher", email ="advacher@student.42lyon.fr"}]
requires-python = ">=3.10"
dependencies = [
    "llm-sdk",
    "numpy",
    "pydantic",
]

[project.optional-dependencies]
dev = [
    "flake8",
    "mypy",
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]
files = ["src"]
python_version = "3.10"
strict = true
ignore_missing_imports = true
exclude = ["llm_sdk"]

[[tool.mypy.overrides]]
module = "llm_sdk.*"
ignore_errors = true

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv.workspace]
members = [
    "llm_sdk",
]

[tool.uv.sources]
llm-sdk = { workspace = true }

[dependency-groups]
dev = [
    "flake8>=7.3.0",
    "mypy>=1.20.0",
]
